Corrected deprecated APIs - Float and Integer